--- a/basics/exercise-1.html
+++ b/basics/exercise-1.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>VueJS</title>
     <link rel="stylesheet" href="">
-    <script src="./vue.js"></script>
+    <script src="../vue.js"></script>
 </head>
 <body>
 
-<script src="./vue.js"></script>
+<script src="../vue.js"></script>
 
 <div id="exercise">
     <!-- 1) Fill the <p> below with your Name and Age - using Interpolation -->
